--- a/ansible/roles/wsl/vars/main.yml
+++ b/ansible/roles/wsl/vars/main.yml
@@ -1,5 +1,6 @@
 apt_repositories:
   - ppa:rmescandon/yq
+  - ppa:longsleep/golang-backports
 
 apt_packages:
   - curl
@@ -7,6 +8,7 @@ apt_packages:
   - jq
   - yq
   - cowsay
+  - golang-go
   - awscli
 
 node_version: 12
