Install GitHub cli
https://cli.github.com/

--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -1,6 +1,7 @@
 - import_tasks: apt.yml
 - import_tasks: bash.yml
 - import_tasks: node.yml
+- import_tasks: gh.yml
 - import_tasks: go.yml
 - import_tasks: aws.yml
 - import_tasks: cows.yml
