--- a/ansible/roles/wsl/tasks/go.yml
+++ b/ansible/roles/wsl/tasks/go.yml
@@ -10,3 +10,7 @@
     path: "$HOME/.bashrc"
     line: 'export PATH="${GOPATH}/bin:${PATH}"'
     state: present
+
+- name: Install golangci-lint
+  shell:
+    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v{{ golangci_version }}
