Install latest golangci-lint

--- a/ansible/roles/wsl/tasks/go.yml
+++ b/ansible/roles/wsl/tasks/go.yml
@@ -13,4 +13,4 @@
 
 - name: Install golangci-lint
   shell:
-    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v{{ golangci_version }}
+    curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
