--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -3,5 +3,6 @@
 - import_tasks: node.yml
 - import_tasks: gh.yml
 - import_tasks: go.yml
+- import_tasks: npm.yml
 - import_tasks: azure.yml
 - import_tasks: cows.yml
