Update AWS CLI to v2

--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -4,5 +4,6 @@
 - import_tasks: gh.yml
 - import_tasks: go.yml
 - import_tasks: npm.yml
+- import_tasks: aws.yml
 - import_tasks: azure.yml
 - import_tasks: cows.yml
