--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -4,6 +4,7 @@
 - import_tasks: gh.yml
 - import_tasks: go.yml
 - import_tasks: npm.yml
+- import_tasks: ngrok.yml
 - import_tasks: aws.yml
 - import_tasks: azure.yml
 - import_tasks: cows.yml
