--- a/ansible/roles/wsl/tasks/azure.yml
+++ b/ansible/roles/wsl/tasks/azure.yml
@@ -1,4 +1,3 @@
 ---
 - name: Install the Azure CLI
-  shell:
-    curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+  shell: curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
