--- a/ansible/roles/wsl/tasks/node.yml
+++ b/ansible/roles/wsl/tasks/node.yml
@@ -1,7 +1,6 @@
 ---
 - name: Add a source file for the official Node.js {{ node_version }}.x repo
-  shell:
-    curl -sL https://deb.nodesource.com/setup_{{ node_version }}.x | sudo -E bash -
+  shell: curl -sL https://deb.nodesource.com/setup_{{ node_version }}.x | sudo -E bash -
 
 - name: Install Node.js {{ node_version }}.x
   become: yes
