--- a/ansible/roles/wsl/tasks/aws.yml
+++ b/ansible/roles/wsl/tasks/aws.yml
@@ -16,3 +16,27 @@
   command: /tmp/aws/install --update
   args:
     removes: /usr/local/aws-cli/v2/current
+
+- name: Create directory for AWS SAM CLI installer
+  ansible.builtin.file:
+    path: /tmp/sam-installation
+    state: directory
+    mode: '0755'
+
+- name: Download the AWS SAM CLI installer
+  ansible.builtin.unarchive:
+    src: https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip
+    dest: /tmp/sam-installation
+    remote_src: yes
+
+- name: Install AWS SAM CLI
+  become: yes
+  command: /tmp/sam-installation/install
+  args:
+    creates: /usr/local/aws-sam-cli/current
+
+- name: Update AWS SAM CLI
+  become: yes
+  command: /tmp/sam-installation/install --update
+  args:
+    removes: /usr/local/aws-sam-cli/current
