--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
 		"eamodio.gitlens",
 		"Gruntfuggly.todo-tree",
 		"mattpocock.ts-error-translator",
+		"ms-vscode-remote.vscode-remote-extensionpack",
 		"Orta.vscode-jest",
 		"rangav.vscode-thunder-client",
 		"streetsidesoftware.code-spell-checker",
@@ -17,6 +18,6 @@
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
-		
+
 	]
 }
