Install zsh and oh-my-zsh
https://github.com/ohmyzsh/ohmyzsh/wiki/Installing-ZSH

Closes #5

--- a/ansible/roles/wsl/tasks/cows.yml
+++ b/ansible/roles/wsl/tasks/cows.yml
@@ -1,6 +1,12 @@
 ---
-- name: Randomise those cows!
+- name: Randomise those cow in bashrc!
   lineinfile:
     path: "$HOME/.bashrc"
+    line: 'export ANSIBLE_COW_SELECTION=random'
+    state: present
+
+- name: Randomise those cows in zshrc!
+  lineinfile:
+    path: "$HOME/.zshrc"
     line: 'export ANSIBLE_COW_SELECTION=random'
     state: present
