--- a/ansible/roles/wsl/tasks/go.yml
+++ b/ansible/roles/wsl/tasks/go.yml
@@ -10,3 +10,15 @@
     path: "$HOME/.bashrc"
     line: 'export PATH="${GOPATH}/bin:${PATH}"'
     state: present
+
+- name: Add GOPATH in zshrc
+  lineinfile:
+    path: "$HOME/.zshrc"
+    line: 'export GOPATH=$HOME/go'
+    state: present
+
+- name: Update PATH with GOPATH in zshrc
+  lineinfile:
+    path: "$HOME/.zshrc"
+    line: 'export PATH="${GOPATH}/bin:${PATH}"'
+    state: present
