--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -1,5 +1,6 @@
 - import_tasks: apt.yml
 - import_tasks: bash.yml
+- import_tasks: zsh.yml
 - import_tasks: git.yml
 - import_tasks: node.yml
 - import_tasks: gh.yml
