--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -9,4 +9,5 @@
 - import_tasks: ngrok.yml
 - import_tasks: aws.yml
 - import_tasks: azure.yml
+- import_tasks: liquibase.yml
 - import_tasks: cows.yml
