--- a/ansible/roles/wsl/vars/main.yml
+++ b/ansible/roles/wsl/vars/main.yml
@@ -12,8 +12,11 @@ apt_packages:
   - python3-pip
   - python3-venv
   - zsh
+  - default-jre
 
 node_packages:
   - aws-cdk
 
 node_version: 18
+
+liquibase_version: 4.21.1
