--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -10,4 +10,5 @@
 - import_tasks: aws.yml
 - import_tasks: azure.yml
 - import_tasks: liquibase.yml
+- import_tasks: tmpreaper.yml
 - import_tasks: cows.yml
