--- a/ansible/roles/wsl/tasks/go.yml
+++ b/ansible/roles/wsl/tasks/go.yml
@@ -1,24 +1,6 @@
 ---
-- name: Add GOPATH in bashrc
-  lineinfile:
-    path: "$HOME/.bashrc"
-    line: 'export GOPATH=$HOME/go'
-    state: present
-
-- name: Update PATH with GOPATH in bashrc
-  lineinfile:
-    path: "$HOME/.bashrc"
-    line: 'export PATH="${GOPATH}/bin:${PATH}"'
-    state: present
-
-- name: Add GOPATH in zshrc
-  lineinfile:
-    path: "$HOME/.zshrc"
-    line: 'export GOPATH=$HOME/go'
-    state: present
-
-- name: Update PATH with GOPATH in zshrc
-  lineinfile:
-    path: "$HOME/.zshrc"
-    line: 'export PATH="${GOPATH}/bin:${PATH}"'
-    state: present
+- name: Install Go
+  become: yes
+  community.general.snap:
+    name: go
+    classic: true
