--- a/ansible/roles/wsl/tasks/apt.yml
+++ b/ansible/roles/wsl/tasks/apt.yml
@@ -1,24 +1,18 @@
 ---
-- name: Add PPA repositories
-  become: yes
-  apt_repository:
-    repo: "{{ item }}"
-  with_items: "{{ apt_repositories }}"
-
 - name: Update and upgrade apt packages
   become: yes
-  apt:
+  ansible.builtin.apt:
     upgrade: yes
     update_cache: yes
     cache_valid_time: 86400 #One day
 
 - name: Install packages
   become: yes
-  apt:
+  ansible.builtin.apt:
     name: "{{ apt_packages }}"
     state: latest
 
 - name: Remove dependencies that are no longer required
   become: yes
-  apt:
+  ansible.builtin.apt:
     autoremove: yes
