--- a/ansible/roles/wsl/tasks/cows.yml
+++ b/ansible/roles/wsl/tasks/cows.yml
@@ -1,12 +1,12 @@
 ---
 - name: Randomise those cow in bashrc!
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "$HOME/.bashrc"
     line: 'export ANSIBLE_COW_SELECTION=random'
     state: present
 
 - name: Randomise those cows in zshrc!
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "$HOME/.zshrc"
     line: 'export ANSIBLE_COW_SELECTION=random'
     state: present
