--- a/ansible/roles/wsl/tasks/gh.yml
+++ b/ansible/roles/wsl/tasks/gh.yml
@@ -1,16 +1,17 @@
 ---
-- name: Add GitHub CLI apt key
+- name: Add GitHub CLI repository using key from URL
   become: yes
-  apt_key:
-    keyserver: keyserver.ubuntu.com
-    id: 23F3D4EA75716059
-
-- name: Add GitHub CLI apt repository
-  become: yes
-  command: apt-add-repository https://cli.github.com/packages
+  ansible.builtin.deb822_repository:
+    name: github-cli
+    types: deb
+    uris: https://cli.github.com/packages
+    suites: '{{ ansible_distribution_release }}'
+    components: stable
+    architectures: amd64
+    signed_by: https://cli.github.com/packages/githubcli-archive-keyring.gpg
 
 - name: Install GitHub CLI package
   become: yes
-  apt:
+  ansible.builtin.apt:
     name: gh
     state: latest
