--- a/ansible/roles/wsl/tasks/main.yml
+++ b/ansible/roles/wsl/tasks/main.yml
@@ -1,12 +1,13 @@
 - import_tasks: apt.yml
-- import_tasks: snap.yml
 - import_tasks: bash.yml
 - import_tasks: zsh.yml
 - import_tasks: git.yml
 - import_tasks: node.yml
-#- import_tasks: gh.yml
-- import_tasks: go.yml
 - import_tasks: npm.yml
+- import_tasks: go.yml
+#- import_tasks: gh.yml
+- import_tasks: yq.yml
+- import_tasks: ngrok.yml
 - import_tasks: aws.yml
 - import_tasks: azure.yml
 - import_tasks: liquibase.yml
